# partial-tagger

./: LICENSE  README.md  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: 001-bug.md
.github/workflows/: ci.yml
examples/: basic_usage.py
partial_tagger/: __init__.py  crf.py  decoder.py  embedders.py  feature_extractor.py  loss_function.py  tagger.py  taggers.py
partial_tagger/crf/: __init__.py  decoders.py  functional.py  layer.py  loss_functions.py
partial_tagger/decoders/: __init__.py  base.py  viterbi.py
partial_tagger/encoders/: __init__.py  base.py  linear.py
partial_tagger/functional/: crf.py
partial_tagger/layers/: __init__.py  crf.py
tests/: conftest.py  helpers.py  test_crf.py  test_tagger.py  test_taggers.py
tests/crf/: test_core.py  test_decoders.py  test_functional.py  test_layer.py  test_loss_functions.py  test_nn.py
tests/decoders/: test_viterbi.py
tests/encoders/: test_linear.py
tests/functional/: test_crf.py
tests/layers/: test_crf.py
