[tool.poetry]
name = "partial-tagger"
version = "0.2.0"
description = ""
authors = ["yasufumi <yasufumi.taniguchi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^22.1.0"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
show_error_codes = true

[tool.isort]
profile = "black"
include_trailing_comma = true
multi_line_output = 3

[tool.black]
exclude = '''
/(
    .eggs
  | .git
  | .hg
  | .pytest_cache
  | .mypy_cache
  | .tox
  | .venv
  | build
  | dist
)/
'''
